add statics files

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,2 @@
-MONGO_URI="mongodb://127.0.0.1/node-restapi-starter"
-JWT_SECRET="#&^GFSVBHII848!@!"
+MONGO_URI="mongodb://127.0.0.1/shortener-api"
 PORT=3010
-EXPIRES=64000
